# COSCUP-Volunteer

./: .dockerignore  .gitignore  .gitpod.yml  .ycm_extra_conf.py.asc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-app  Dockerfile-app-dev  Dockerfile-base  Dockerfile-base-dev  README.md  SECURITY.md  appspec.yml  build-app.sh  build-base.sh  client_secret.json.asc  docker-compose.yml  main.py  privacy.md  privacy.txt  pyproject.toml  requirements.txt  restart_app.sh  secretary-e00794553a7d.json.asc  setting.py.asc  setting_sample.py  start_api.sh  start_app.sh  start_celery.sh  start_memcached.sh  start_mongo.sh  start_rabbitmq.sh  start_worker.sh  uwsgi.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---.md  cross_team_support.yml  retrospective.yml
.github/workflows/: build_docs.yml  build_image.yml  codeql-analysis.yml  deploy_staging.yml  docker-compose.yml  pytest.yml
api/: dependencies.py  main.py
api/apistructs/: items.py  members.py  projects.py  sender.py  tasks.py  teams.py  users.py
api/routers/: members.py  projects.py  sender.py  tasks.py  teams.py  user.py
celery_task/: celery.py  celery_main.py  task_applyreview.py  task_expense.py  task_ipinfo.py  task_mail_sys.py  task_sendermailer.py  task_service_sync.py
cmd/: db.py  dev.py  main.py
cmdtools/: dev.py  main.py
deploy_scripts/: after_install.sh  application_start.sh  application_stop.sh
docs_dev/: entrypoint.sh  mkdocs.yml
docs_dev/docs/: contribute.md  contribute.zh-TW.md  contribute.zh_TW.md  dev-api.md  dev-beginners.md  dev-build-base-image.md  dev-setup.md  getting-started.md  index.md  index.zh-TW.md  index.zh_TW.md  intro.md  intro.zh_TW.md  security.md  security.zh_TW.md
docs_dev/docs/about_coscup/: calendar.md  calendar.zh-TW.md  team_leader_handbook.md  team_leader_handbook.zh-TW.md  team_leader_handbook.zh_TW.md  team_member_handbook.md  team_member_handbook.zh-TW.md  team_member_handbook.zh_TW.md  team_setup.md  team_setup.zh-TW.md
docs_dev/docs/about_coscup/attendee_services/: index.md  index.zh-TW.md
docs_dev/docs/about_coscup/eve_gathering/: overview.md  overview.zh-TW.md  overview.zh_TW.md
docs_dev/docs/about_coscup/fun_fair/: overview.md  overview.zh-TW.md  overview.zh_TW.md
docs_dev/docs/about_coscup/healing_lectures/: overview.md  overview.zh-TW.md
docs_dev/docs/about_coscup/health_market/: overview.md  overview.zh-TW.md
docs_dev/docs/about_coscup/how_to_participate/: 2024_cfp.md  2024_cfp.zh-TW.md  as_attendee.md  as_attendee.zh-TW.md  as_attendee.zh_TW.md  as_community.md  as_community.zh-TW.md  as_organizing_team.md  as_organizing_team.zh-TW.md  as_speaker.md  as_speaker.zh-TW.md  as_sponsor.md  as_sponsor.zh-TW.md  index.md  index.zh-TW.md
docs_dev/docs/announcement/: pycontw_2023_sprints.md  pycontw_2023_sprints.zh-TW.md  pycontw_2023_sprints.zh_TW.md  review_in_2022.md  review_in_2022.zh-TW.md  review_in_2022.zh_TW.md
docs_dev/docs/code_reference/: celery_task.md  main.md  overview.md  view.md
docs_dev/docs/dev/: api.md  beginners.md  beginners.zh-TW.md  beginners.zh_TW.md  build-base-image.md  build-base-image.zh-TW.md  build-base-image.zh_TW.md  contribute-on-github.md  dco.md  dev-page.md  dev-page.zh_TW.md  how-to-signoff.md
docs_dev/docs/error_note/: e001.md  e001.zh_TW.md
docs_dev/docs/global_engagement/: hello_world.md  scale21x.md  scale21x.zh-TW.md  scale21x.zh_TW.md
docs_dev/docs/secretary_team/: overview.md  overview.zh-TW.md  overview.zh_TW.md  recruit.md  recruit.zh-TW.md  recruit.zh_TW.md  roadmap.md  roadmap.zh_TW.md
docs_dev/docs/stylesheets/: extra.css
docs_dev/overrides/: main.html
docs_dev/overrides/partials/: comments.html
drawio/: coscup_volunteer.drawio
models/: api_tokendb.py  applyreviewdb.py  base.py  budgetdb.py  dispensedb.py  expensedb.py  formdb.py  index.py  mailletterdb.py  mattermost_link_db.py  mattermostdb.py  oauth_db.py  projectdb.py  senderdb.py  tasksdb.py  teamdb.py  telegram_db.py  trackdb.py  users_db.py  usessiondb.py  waitlistdb.py
module/: api_token.py  applyreview.py  awsses.py  budget.py  dietary_habit.py  dispense.py  expense.py  form.py  gitlab_api.py  gsuite.py  ipinfo.py  mattermost_bot.py  mattermost_link.py  mc.py  oauth.py  project.py  project_working.py  rail_api.py  rail_api_enum.py  sender.py  service_sync.py  skill.py  tasks.py  team.py  telegram_bot.py  track.py  users.py  usession.py  waitlist.py
nginx/: Dockerfile  nginx.conf
nginx/logrotate/: nginx
nginx/sites/: volunteer_dev.conf
scripts/: patch_birthday_date.py  working_applyreview.py  working_tracks.py
static/: DispenseEditor.js  DispenseTable.js  ExpenseEditor.js  ExpenseInvoiceTotalCard.js  ExpenseStatusLabel.js  ExpenseTable.js  InvoiceList.js  UserBadge.js  expense-component.css  forms.css
structs/: projects.py  tasks.py  teams.py  users.py
templates/: base.html  budget.html  budget_batch.html  bug_report.html  coc.html  coc.md  dev_index.html  expense.html  expense_lists.html  expense_menu.html  expense_my.html  form.html  form_accommodation.html  form_appreciation.html  form_clothes.html  form_drink.html  form_parking_card.html  form_traffic_fee.html  form_volunteer_certificate.html  guide_index.html  index.html  index_guide.html  privacy.html  project_contact_book.html  project_dietary_habit.html  project_edit.html  project_edit_base.html  project_edit_create_team.html  project_form.html  project_form_accommodation.html  project_form_traffic_mapping.html  project_index.html  project_statistics.html  project_teams_index.html  recruit_list.html  schedule.html  schedule_submissions.html  schedule_talks.html  security_guard.html  security_guard.md  (+29 more)
templates/mail/: base.html  base_member_add.html  base_member_del.html  base_member_deny.html  base_member_waiting.html  coscup_base.html  sender_base.html  tasks_star.html  welcome.html
tests/: test_module_users.py  test_rail_api.py
view/: api.py  budget.py  dev.py  dispense.py  expense.py  guide.py  links.py  project.py  recruit.py  schedule.py  sender.py  setting.py  tasks.py  team.py  telegram.py  user.py  utils.py
(+104 files in other folders)
