[tool.poetry]
authors = ["COSCUP Volunteer <volunteer@coscup.org>"]
description = "COSCUP Volunteer 志工服務系統，主要解決招募、人員管理、行政流程建立。"
license = "AGPL-3.0"
name = "coscup-volunteer"
version = "2024.04.25"

[tool.poetry.dependencies]
Markdown = "^3.3.7"
arrow = "^1.2.2"
blinker = "^1.6"
boto3 = "^1.26"
celery = "^5.2"
fastapi = "^0.99.0"
flask = "^3.0"
google-api-python-client = "^2.86.0"
google-auth = "^2.17.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
phonenumbers = "^8.13"
pydantic = {extras = ["email"], version = "^1.10.1"}
pylibmc = "^1.6.1"
pymongo = "^4.3"
python = "~3.11.7"
python-multipart = "^0.0.6"
requests = "^2.29"
toldwords = "^0.8"
uWSGI = "^2.0.20"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

# TODO: temporarily fixed in 3.0
watchdog = "^3.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
awscli = "^1.27"
black = "^23"
cairosvg = "^2.7"
certifi = "*"
click = "^8.1.3"
lxml = "^4.9.1"
mkdocs-git-revision-date-localized-plugin = "^1.2"
mkdocs-material = "^9.1"
mkdocs-static-i18n = {extras = ["material"], version = "^1.2"}
mkdocstrings = {extras = ["python"], version = "^0.24"}
mongomock = "^4.1"
mypy = "^1"
pillow = "^10.0"
pylint = "^2"
pytest = "^7.3"
pytest-cov = "^4.0.0"
types-markdown = "^3.4.2.1"
types-requests = "^2.29"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
required_plugins = "pytest-cov"

# https://coverage.readthedocs.io/en/latest/config.html?highlight=pyproject.toml
[tool.coverage.run]
omit = ["setting_sample.py", "setting.py", "tests/*"]

# https://githb.com/PyCQA/isort/wiki/isort-Settings
[tool.isort]
virtual_env = "./.venv"

[tool.mypy]
# --strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
# --strict end
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  'apiclient',
  'celery.*',
  'celery_task.*',
  'google_auth_oauthlib.*',
  'kombu',
]
# TODO: Need to fix this for typing hint
disallow_untyped_decorators = false
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pylint.main]
extension-pkg-whitelist = "pydantic"
good-names = "i,j,k,ex,Run,_,id"
init-hook = "import os, sys; sys.path.insert(0, os.getcwd())"

[tool.pylint."messages control"]
disable = ["W0223", "E1101", "E0611"]

[tool.pylint.typecheck]
generated-members = ["setting", "googleapiclient.discovery.*", "pymongo"]
